--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".AuthenticationActivity"
                   android:label="@string/app_name"/>
+        <activity android:name=".VenueDetailActivity"
+                  android:label="@string/app_name"/>
     </application>
 
 </manifest>
